# mengram

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  __init__.py  cli.py  docker-compose.yml  mengram.py  mengram_middleware.py  pyproject.toml  railpack.json  requirements.txt
.claude/: settings.json
api/: cloud_mcp_server.py  mcp_server.py  rest_server.py
cloud/: Procfile  api.py  async_client.py  blog-index.html  blog.html  client.py  dashboard.html  embedder.py  evolution.py  landing.html  schema.sql  seed_demo.py  store.py  usecase.html  vs.html
engine/: brain.py
engine/extractor/: conversation_extractor.py
engine/vault_manager/: vault_manager.py
examples/customer-support-agent/: requirements.txt
examples/devops-agent/: requirements.txt
examples/personal-assistant/: main.py  requirements.txt
obsidian-plugin/: README.md  esbuild.config.mjs  manifest.json  package.json  styles.css
obsidian-plugin/src/: main.ts  mengram-client.ts  search-modal.ts  settings.ts  sync.ts
sdk/js/: index.d.ts  index.js  package.json
sdk/langchain-mengram/: pyproject.toml
sdk/langchain-mengram/langchain_mengram/: __init__.py  history.py  profile.py  retrievers.py
vscode-mengram/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
vscode-mengram/media/: main.css  main.js  reset.css
vscode-mengram/src/: MengramViewProvider.ts  extension.ts
